# spa-assignment-2

./: .gitignore  CMakeLists.txt  Makefile  README.md  debug_run.sh  env_vars.sh  run.sh
RangeAnalysis/: CFGModulePass.cpp  ClientRA.cpp  DeadCodeElimination.cpp  DeadCodeElimination.h  RangeAnalysis.h  vSSA.h
tests/: test_1.ll  test_2.ll  test_3.cpp
tests/graphs/: test_1.dot  test_1_optimized.dot  test_2.dot  test_2_optimized.dot  test_3.dot  test_3_optimized.dot
